@@ -2,6 +2,7 @@
 * 2.1-M3
 *
 
+- MQTT support
 - Improved event correlation based on network topology
 - Improved the usability of the Server Configuration, by adding descriptions and recognition for data types and possible values
 - Alternative core configuration section can be set for nxagentd using -G command line option
@@ -11,6 +12,7 @@
 - New method "setMapImage" in NXSL class "NetObj"
 - New attribute "mapImage" in NXSL class "NetObj"
 - New NXSL class "Container"
+- New NXSL function AgentExecuteActionWithOutput
 - Container autobind mode and script can be set from NXSL
 - Fixed bug in NXSL string concatenation
 - Events generated when interface expected state changed
